# OOP-Project

./: CMakeLists.txt  README.md  main.cpp
headers/: Apple.h  Board.h  Cell.h  Eroare.h  Food.h  Game.h  Observer.h  Poisoned_Apple.h  Snake.h
src/: Apple.cpp  Board.cpp  Cell.cpp  Eroare.cpp  Food.cpp  Game.cpp  Poisoned_Apple.cpp  Snake.cpp
